--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
   <script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
   <script src="js/libs/ember-1.0.0-pre.2.min.js"></script>
   
-  <!-- App Object -->
+  <!-- websocket -->
+  
+  <script src="js/websocket.js"></script>
+  
+  <!-- app Object -->
   
   <script src="js/app.js"></script>
 
