--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
   <script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
   <script src="js/libs/ember-1.0.0-pre.2.min.js"></script>
   
+  <!-- all global properties -->
+  
+  <script src="js/properties.js"></script>
+  
   <!-- websocket -->
   
   <script src="js/websocket.js"></script>
