--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- views -->
   
   <script type="text/x-handlebars" data-template-name="startpage">
-    <a href="#" {{action "createChatroom" target="App.router.chatroomController"}}>Create new Chatroom</a>
+    <a href="#" {{action "sendInitMessagesToServer" target="App.router.chatroomController"}}>Create new Chatroom</a>
   </script>
   
   <script type="text/x-handlebars" data-template-name="chatroom">
@@ -67,7 +67,7 @@
   </script>
   
   <script type="text/x-handlebars" data-template-name="box">
-    
+    <video id="myVideoBox" width="250" height="250"></video>
   </script>
   
   
