--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- views -->
   
   <script type="text/x-handlebars" data-template-name="startpage">
-    <a href="#" {{action "sendInitMessagesToServer" target="App.router.chatroomController"}}>Create new Chatroom</a>
+    <a href="#" {{action "setUpChatroom" target="App.router.startpageController"}}>Create new Chatroom</a>
   </script>
   
   <script type="text/x-handlebars" data-template-name="chatroom">
