--- a/webrtc.html
+++ b/webrtc.html
@@ -16,6 +16,7 @@
     
     <video id="local-stream" autoplay>local</video>
     <video id="remote-stream" autoplay>remote</video>
+    <p id="url"></p>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="js/webrtc.js"></script>
