bug free two person video chat

--- a/webrtc.html
+++ b/webrtc.html
@@ -13,8 +13,10 @@
     </style>
   </head>
   <body>
-    
+    <label for="local-stream">Local</label>
     <video id="local-stream" autoplay>local</video>
+    
+     <label for="local-stream">Remote</label>
     <video id="remote-stream" autoplay>remote</video>
     <p id="url"></p>
     <p id="id"></p>
