--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="css/style.css?v=2">
+  <link rel="stylesheet" href="css/startpage.css">
+  <link rel="stylesheet" href="css/chatroom.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,8 +32,10 @@
     </header>
 
     <div id="_content">
-      <h1>Hier kannst du mit deinen Freunden Videochatten!</h1>
-      <p>Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.</p>
+      <div id="_startInfo">
+        <h1>Hi! Hier kannst du mit Freunden Videochatten.</h1>
+        <p>Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.</p>
+      </div>
       {{outlet}}
     </div>
 
@@ -44,6 +48,8 @@
   
   <script type="text/x-handlebars" data-template-name="startpage">
     <div id="_startButton"><a href="#" {{action "setUpChatroom" target="App.router.startpageController"}}>START</a></div>
+   // toolbox zum testen, soll dann nur mehr im chatroomtemplate sein
+   <div id="_tooltip">Ihr Browser fragt sie ob er Zugriff auf ihre Kamera bekommt. Um Videochatten zu können musst du das mit <strong>allow</strong> bestätigen!</div><div id="_tooltipArrow"></div>
   </script>
   
   
@@ -52,7 +58,7 @@
     {{#view Ember.Button target="controller" action="showInvitationForm"}}
         '+' 
     {{/view}}
-    
+   <div id="_tooltip">Ihr Browser fragt sie ob er Zugriff auf ihre Kamera bekommt. Um Videochatten zu können musst du das mit <strong>allow</strong> bestätigen!</div><div id="_tooltipArrow"></div>
     <div id="messageBox"></div>
     
     <div id="videoboxes"></div>
@@ -128,6 +134,15 @@
   <!-- init app -->
   
   <script src="js/main.js"></script>
-  
+    <script type="text/javascript">
+        var tooltipValue;
+
+        $("#_tooltip").click(function(){ alert('test'); });
+
+        $("#_tooltip").mouseover(function(){
+          tooltipValue = $(this).value;
+          $(this).value('Klicken um Fenster zu schließen');
+        });
+  </script>
 </body>
 </html>
