--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
     <h1>Hi! Hier kannst du mit Freunden Videochatten.</h1>
     <p>Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.</p>
     </div>
-    <div id="_startButton"><a href="#" {{action "setUpChatroom" target="App.router.startpageController"}}>START</a></div>
+    {{#linkTo "room"}}<div id="_startButton">START</div>{{/linkTo}}
   </script>
 
-  <script type="text/x-handlebars" data-template-name="chatroom">
-    <!-- plus button -->
-    {{#view Ember.Button target="controller" action="showInvitationForm"}}
-    '+'
-    {{/view}}
-    <div id="_tooltip">Ihr Browser fragt sie ob er Zugriff auf ihre Kamera bekommt. Um Videochatten zu können musst du das mit <strong>allow</strong> bestätigen!</div><div id="_tooltipArrow"></div>
-    <div id="messageBox"></div>
+  <script type="text/x-handlebars" data-template-name="room">
+    <header>
+      {{#linkTo "about"}}<div id="_infoButton"></div>{{/linkTo}}
+      {{#linkTo "room.hangup"}}<div>Auflegen</div>{{/linkTo}}
+    </header>
+    {{id}}
+    
+    <!--<div id="_tooltip">Ihr Browser fragt sie ob er Zugriff auf ihre Kamera bekommt. Um Videochatten zu können musst du das mit <strong>allow</strong> bestätigen!</div><div id="_tooltipArrow"></div>
+    <div id="messageBox"></div>-->
 
     <div id="videoboxes"></div>
-    <!-- cancel button -->
-    <a href="#/" onclick="App.router.transitionTo('index')">Cancel Chatroom</a>
   </script>
 
   <script type="text/x-handlebars" data-template-name="about">
@@ -85,22 +85,19 @@
 
   <script src="js/views/application.js"></script>
   <script src="js/views/startpage.js"></script>
-  <script src="js/views/chatroom.js"></script>
-  <script src="js/views/box.js"></script>
+  <script src="js/views/room.js"></script>
   <script src="js/views/invitation.js"></script>
 
   <!-- models -->
 
   <script src="js/models/user.js"></script>
-  <script src="js/models/chatroom.js"></script>
-  <script src="js/models/box.js"></script>
+  <script src="js/models/room.js"></script>
 
   <!-- controllers -->
 
   <script src="js/controllers/application.js"></script>
-  <script src="js/controllers/startpage.js"></script>
-  <script src="js/controllers/chatroom.js"></script>
-  <script src="js/controllers/box.js"></script>
+  <script src="js/controllers/index.js"></script>
+  <script src="js/controllers/room.js"></script>
 
   <!-- router -->
 
