--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- app view -->
 
   <script type="text/x-handlebars" data-template-name="application">
-    <div id="_content">
+    <div id="content">
     {{outlet}}
     </div>
 
@@ -23,21 +23,22 @@
 
   <script type="text/x-handlebars" data-template-name="index">
     <header>
-    {{#linkTo "about"}}<div id="_infoButton"></div>{{/linkTo}}
+    {{#linkTo "about"}}<div id="infoButton"></div>{{/linkTo}}
     </header>
-    <div id="_startInfo">
+    <div id="startInfo">
     <h1>Hi! Hier kannst du mit Freunden Videochatten.</h1>
     <p>Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.</p>
     </div>
-    {{#linkTo "room"}}<div id="_startButton">START</div>{{/linkTo}}
+     {{#linkTo "room"}}<div id="startButtonImage"></div>{{/linkTo}}
   </script>
 
   <script type="text/x-handlebars" data-template-name="room">
     <header>
-      {{#linkTo "about"}}<div id="_infoButton"></div>{{/linkTo}}
+      {{#linkTo "about"}}<div id="infoButton"></div>{{/linkTo}}
       {{#linkTo "room.hangup"}}<div>Auflegen</div>{{/linkTo}}
     </header>
-    {{id}}
+    <label for="local-stream">that's me</label>
+    <video id="local-stream" autoplay>local</video>
     
     <!--<div id="_tooltip">Ihr Browser fragt sie ob er Zugriff auf ihre Kamera bekommt. Um Videochatten zu können musst du das mit <strong>allow</strong> bestätigen!</div><div id="_tooltipArrow"></div>
     <div id="messageBox"></div>-->
@@ -47,7 +48,7 @@
 
   <script type="text/x-handlebars" data-template-name="about">
     <header>
-    {{#linkTo "index"}}<div id="_infoButton"></div>{{/linkTo}}
+    {{#linkTo "index"}}<div id="infoButton"></div>{{/linkTo}}
     </header>
     About
   </script>
