localstream gets shown

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
   <!-- views -->
 
-  <script src="js/views/application.js"></script>
-  <script src="js/views/startpage.js"></script>
+  <script src="js/views/index.js"></script>
   <script src="js/views/room.js"></script>
   <script src="js/views/invitation.js"></script>
 
@@ -100,9 +99,9 @@
 
   <!-- controllers -->
 
-  <script src="js/controllers/application.js"></script>
   <script src="js/controllers/index.js"></script>
   <script src="js/controllers/room.js"></script>
+  <script src="js/controllers/user.js"></script>
 
   <!-- router -->
 
