--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" href="css/startpage.css">
   <link rel="stylesheet" href="css/chatroom.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/libs/head.js"></script>
 </head>
 <body>
-
-  <!-- app view -->
-
+  
+<!-- app view -->
   <script type="text/x-handlebars" data-template-name="application">
     <div id="content">
     {{outlet}}
@@ -18,49 +18,29 @@
     <footer>Copyright by F.J.Brünner, L.Wanko, M.Tiefenthaler and the University of Applied Sciences in Salzburg</footer>
 
   </script>
-	
+
+
 
   <!-- templates -->
-  
-  <script src="js/templates/templates.js"></script>
 
-  <!-- libs -->
+  <script src="js/templates/templates.js"></script>
   
+  <!-- libs -->
+
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script> window.jQuery || document.write('<script src="js/libs/jquery.js"><\/script>')</script>
+  <script src="js/libs/handlebars-1.0.0-rc.3.js"></script> 
+  <script src="js/libs/ember-1.0.0-rc.1.js"></script> 
+  <script src="js/app.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/router.js"></script>
+  
+  <!-- models, controller and views -->
+  
   <script>
-    window.jQuery || document.write('<script src="js/libs/jquery.js"><\/script>')
+    head.js("js/views/index.js", "js/views/room.js", "js/views/invitation.js", "js/models/user.js", "js/models/room.js", "js/controllers/index.js", "js/controllers/room.js", "js/controllers/user.js", function() {});
   </script>
 
-  <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.1.js"></script>
-  
-  <!-- app Object -->
 
-  <script src="js/app.js"></script>
-
-  <!-- views -->
-
-  <script src="js/views/index.js"></script>
-  <script src="js/views/room.js"></script>
-  <script src="js/views/invitation.js"></script>
-
-  <!-- models -->
-
-  <script src="js/models/user.js"></script>
-  <script src="js/models/room.js"></script>
-
-  <!-- controllers -->
-
-  <script src="js/controllers/index.js"></script>
-  <script src="js/controllers/room.js"></script>
-  <script src="js/controllers/user.js"></script>
-
-  <!-- router -->
-
-  <script src="js/router.js"></script>
-
-  <!-- init app -->
-
-  <script src="js/main.js"></script>
 </body>
 </html>
