--- a/index.html
+++ b/index.html
@@ -17,65 +17,27 @@
     <!--<footer>Copyright by F.J. Brünner, L. Wanko, M. Tiefenthaler and the University of Applied Sciences in Salzburg</footer>-->
   </script>
 
-  <script type="text/x-handlebars" data-template-name="index">
-    <header>
-    {{#linkTo "about"}}<div id="infoButton"></div>{{/linkTo}}
-    </header>
-    <div id="startInfo">
-    <h1>Hi! Hier kannst du mit Freunden Videochatten.</h1>
-    <p>Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.</p>
-    </div>
-    {{#linkTo "room"}}<div id="startButtonImage"></div>{{/linkTo}}
-  </script>
+  <!-- templates -->
 
-  <script type="text/x-handlebars" data-template-name="room">
-    <div id="videoboxes">
-    <div class="user" id="local">
-    <label>Name</label>
-    <video autoplay></video>
-    </div>
-    </div>
-  </script>
-
-  <script type="text/x-handlebars" data-template-name="about">
-    <header>
-    {{#linkTo "index"}}<div id="infoButton"></div>{{/linkTo}}
-    </header>
-    <div>Das ist ein Projekt, welches im Rahmen des Qualifikationsprojektes 3 an der Fachhochschule Salzburg
-    im Schwerpunkt Web + Communities realisiert wird. Mit der innovativen Technik WebRTC werden wir den Benützern
-    dieser Web-Applikation ermöglichen Multi-Video-Konferenzen kostenlos ohne einer Installation von Plugin zuführen.
-    <br><br>Team<ul><li>Michael Tiefenthaler</li><li>Franz Josef Brünner</li><li>Lukas Wanko</li></ul></div>
-  </script>
-
+  <script src="js/templates/templates.js"></script>
+  
   <!-- libs -->
-  <script src="js/libs/jquery.js"></script>
+
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script> window.jQuery || document.write('<script src="js/libs/jquery.js"><\/script>')</script>
   <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
   <script src="js/libs/ember-1.0.0-rc.1.js"></script>
-
-  <!-- helper -->
-  <script src="js/helpers/webrtc.js"></script>
   <script src="js/helpers/signaling.js"></script>
-
-  <!-- app -->
-  <script src="js/app.js"></script>
-
-  <!-- views -->
-  <script src="js/views/index.js"></script>
-  <script src="js/views/room.js"></script>
-  <script src="js/views/invitation.js"></script>
-
-  <!-- models -->
-  <script src="js/models/user.js"></script>
-  <script src="js/models/room.js"></script>
-
-  <!-- controllers -->
-  <script src="js/controllers/index.js"></script>
-  <script src="js/controllers/room.js"></script>
-  <script src="js/controllers/user.js"></script>
-
-  <!-- router -->
-  <script src="js/router.js"></script>
-
+  <script src="js/helpers/webrtc.js"></script>
+  
+  <script src="js/app.js"></script>  
   <script src="js/main.js"></script>
+  <script src="js/router.js"></script>
+  
+  <!-- models, controller and views -->
+  
+  <script>
+    head.js("js/views/index.js", "js/views/room.js", "js/views/invitation.js", "js/models/user.js", "js/models/room.js", "js/controllers/index.js", "js/controllers/room.js", "js/controllers/user.js", function() {});
+  </script>
 </body>
 </html>
