leaving the room works now

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- models, controller and views -->
   
   <script>
-    head.js("js/views/index.js", "js/views/room.js", "js/views/invitation.js", "js/models/user.js", "js/models/room.js", "js/controllers/index.js", "js/controllers/room.js", "js/controllers/user.js", function() {});
+    head.js("js/views/index.js", "js/views/room.js", "js/views/invitation.js", "js/models/user.js", "js/models/room.js", "js/controllers/index.js", "js/controllers/user.js", function() {});
   </script>
 </body>
 </html>
