--- a/index.html
+++ b/index.html
@@ -17,27 +17,11 @@
     <!--<footer>Copyright by F.J. Brünner, L. Wanko, M. Tiefenthaler and the University of Applied Sciences in Salzburg</footer>-->
   </script>
 
-  <!-- templates -->
 
-  <script src="js/templates/templates.js"></script>
-  
-  <!-- libs -->
-
+  <!-- scripts -->
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script> window.jQuery || document.write('<script src="js/libs/jquery.js"><\/script>')</script>
-  <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.1.js"></script>
-  <script src="js/helpers/signaling.js"></script>
-  <script src="js/helpers/webrtc.js"></script>
   
-  <script src="js/app.js"></script>  
-  <script src="js/main.js"></script>
-  <script src="js/router.js"></script>
-  
-  <!-- models, controller and views -->
-  
-  <script>
-    head.js("js/views/index.js", "js/views/room.js", "js/views/invitation.js", "js/models/user.js", "js/models/room.js", "js/controllers/index.js", "js/controllers/room.js", "js/controllers/user.js", function() {});
-  </script>
+  <script src="scriptLoader.js"></script>
 </body>
 </html>
