--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
   <meta content="text/html;charset=UTF-8" http-equiv="content-type">
   <title>Phovec</title>
