--- a/scripts.html
+++ b/scripts.html
@@ -16,10 +16,11 @@
       {{#linkTo "about" id="infoButton"}}{{/linkTo}}
       {{#linkTo "hangup" id="hangupButton"}}{{/linkTo}}
     </header>
+    <div id="infoField">Für den Videochat musst du den Zugriff auf die Kamera und dein Mikrofon erlauben!</div>
     <div id="videoboxes">
     <div class="user" id="local">
     <label>Name</label>
-    <video autoplay></video>
+    <video id="video" autoplay></video>
     </div>
     </div>
   </script>
@@ -39,7 +40,7 @@
   
   <script type="text/x-handlebars" data-template-name="hangup">
     <header>
-      {{#linkTo "index" id="infoButton"}}{{/linkTo}}
+      {{#linkTo "about" id="infoButton"}}{{/linkTo}}
     </header>
     <h2>Danke das du Phovec benutzt hast. <br /> Du darfst gerne jederzeit wieder kommen!</h2>
     <br />
@@ -69,7 +70,6 @@
 
   <!-- controllers -->
   <script src="js/controllers/index.js"></script>
-  <script src="js/controllers/room.js"></script>
   <script src="js/controllers/user.js"></script>
 
   <!-- router -->
