--- a/scripts.html
+++ b/scripts.html
@@ -18,7 +18,7 @@
       {{#linkTo "hangup" id="hangupButton"}}{{/linkTo}}
       {{ partial 'auth' }}
     </header>
-    <div id="infoField">Für den Videochat musst du den Zugriff auf die Kamera und dein Mikrofon erlauben!</div>
+    <!-- <div id="infoField">Für den Videochat musst du den Zugriff auf die Kamera und dein Mikrofon erlauben!</div> -->
     <div id="videoboxes">
     <div class="user" id="local">
     <label>Name</label>
