complete integration of infofield

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
 
     <script type="text/x-handlebars" data-template-name="application">
+      <div id="blackFilter"></div>
       <div id="content">
       {{outlet}}
       </div>
