--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <div id="content">
       {{outlet}}
       </div>
-      <!--<footer>Copyright by F.J. Brünner, L. Wanko, M. Tiefenthaler and the University of Applied Sciences in Salzburg</footer>-->
     </script>
 
     <!-- templates -->
@@ -122,6 +121,7 @@
     <!-- helper -->
     <script src="js/helpers/webrtc.js"></script>
     <script src="js/helpers/signaling.js"></script>
+    <script src="js/helpers/browser.js"></script>
 
     <!-- app -->
     <script src="js/app.js"></script>
