--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
       </div>
     </div>
     
-    <div id="socialSidebar">{{ partial 'auth' }}</div>
+    <div id="socialSidebar">
+      <div class="getFriends" id="gradient1"></div>
+      <div class="getFriends" id="gradient2"></div>
+      <div class="getFriends" id="gradient3"></div>
+      {{ partial 'auth' }}
+    </div>
     
     <!-- Facebook-Instance -->
     <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
