--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
         {{/view}}
         <div id="videoEffectsBar">
+          <progress value="0" max="1" id="progressSnapshotbar"></progress>
           <div id="videoEffects">
             <input type="button" id="snapshotButton" {{action "takeScreenShotFromChatroom" }} class="" value="Take Snapshot"/>
             <input type="button" id="getSnapshotButton" class="" value="get Snapshot" style="display:none" />
