--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       <h1>Hi! Hier kannst du mit Freunden Videochatten.</h1>
       <p>Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.</p>
       </div>
-      {{#linkTo "room"}}<div id="startButtonImage"></div>{{/linkTo}}
+      {{#linkTo "rooms"}}<div id="startButtonImage"></div>{{/linkTo}}
     </script>
-
+    
+    <script type="text/x-handlebars" data-template-name="rooms"></script>
+    
     <script type="text/x-handlebars" data-template-name="room">
       <header>
       {{#linkTo "about" id="infoButton"}}{{/linkTo}}
@@ -136,7 +138,6 @@
       <a {{action "googleLogout" target="App.Controller.auth"}} class="socialButtons googleButton"></a>
       {{/if}}
 
-      <a class="socialButtons twitterButton"></a>
       <h2 id="userInfo"></h2>
       <div id="friends"></div>
 
