added two routes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       </div>
       {{#linkTo "rooms"}}<div id="startButtonImage"></div>{{/linkTo}}
     </script>
+    
+    <script type="text/x-handlebars" data-template-name="unknown"></script>
+        
+    <script type="text/x-handlebars" data-template-name="full"></script>
 
     <script type="text/x-handlebars" data-template-name="rooms"></script>
 
