added content to new routes

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       {{#linkTo "rooms"}}<div id="startButtonImage"></div>{{/linkTo}}
     </script>
     
-    <script type="text/x-handlebars" data-template-name="unknown"></script>
+    <script type="text/x-handlebars" data-template-name="unknown">Raum unbekannt!</script>
         
-    <script type="text/x-handlebars" data-template-name="full"></script>
+    <script type="text/x-handlebars" data-template-name="full">Voll</script>
 
     <script type="text/x-handlebars" data-template-name="rooms"></script>
 
