face-detector bug fixed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Phovec</title>
     <link rel='icon' href='assets/img/favicon.png' type='image/png'/>
     <link rel="stylesheet" href="assets/css/startpage.css">
-    <link rel="stylesheet" href="assets/css/chatroom.css">
+    <link rel="stylesheet" href="assets/css/room.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/development_mode.css">
+    <link rel="stylesheet" href="assets/css/development.css">
   </head>
   <body>
     <!-- debugger content -->
