new background with real birds ;)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       {{#view App.UserView}}
       <div class="user" id="local">
       <div class="videoOptions">
-      <img src="assets/img/muteButton.png" />
+      <img src="assets/img/audioMute.svg" />
       <img src="assets/img/videoButton.png" />
       </div>
       <span class="name" id="local_name">Name</span>
