--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     </script>
 
     <!-- scripts -->
+    <script src="http://code.jquery.com/jquery-animate.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script>
       window.jQuery || document.write('<script src="assets/js/libs/jquery.js"><\/script>')
