--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
     </script>
 
     <!-- scripts -->
-    <script src="http://code.jquery.com/jquery-animate.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script>
       window.jQuery || document.write('<script src="assets/js/libs/jquery.js"><\/script>')
     </script>
-
+    <script src="assets/js/libs/jquery-animate.min.js"></script>
+    
     <!-- libs -->
     <script src="assets/js/libs/handlebars-1.0.0-rc.3.js"></script>
     <script src="assets/js/libs/ember-1.0.0-rc.1.js"></script>
